Able to drag a item between 2 containers. There are still some bugs: - When dragging a element to a container that already contains an item, if there's isn't any whitespace that is not created by an item, the element will insert itself into the container

--- a/public/assets/css/consumer/consumerStyle.css
+++ b/public/assets/css/consumer/consumerStyle.css
@@ -190,8 +190,8 @@ span[class="fas fa-arrow-right"]{
     border-color: black;
 }
 
-.new-items-container{
-    min-height: 3rem;
+.new-items-container, .list-items-container{
+    min-height: 5rem;
 }
 /*                    PROFILE                    */
 .profile{
